--- a/bonus/index.html
+++ b/bonus/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Assignment 3 - BONUS</title>
+    <script src="./js/app.js" async></script>
     <!-- <link rel="stylesheet" href="css/styles.css"> -->
 
 </head>
